# software-peer-review

./: .all-contributorsrc  .buildinfo  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE.md  README.md  _config.yml  _toc.yml  accepted-checklist.html  build-requirements.txt  changelog.html  checks.html  checks.md  code-of-conduct.html  code-of-conduct.md  conf.py  feed.xml  genindex.html  index.html  index.md  intro.html  intro.md  noxfile.py  objects.inv  policies.md  pyproject.toml  redirects.json  requirements.txt  scope.html  scope.md  search.html  searchindex.js  sitemap.xml
.circleci/: config.yml
.doctrees/: CONTRIBUTING.doctree  accepted-checklist.doctree  changelog.doctree  checks.doctree  code-of-conduct.doctree  environment.pickle  index.doctree  scope.doctree
_build/: collaboration.md  intro.md
_data/: toc.yml
_sources/: CONTRIBUTING.md.txt  accepted-checklist.md.txt  changelog.md.txt  checks.md.txt  code-of-conduct.md.txt  index.md.txt  intro.md  intro.md.txt  scope.md.txt
_static/: documentation_options.js  matomo.js  pyos.css  sphinx-book-theme.css
about/: benefits.html  benefits.md  intro.html  intro.md  our-goals.html  (+5 more)
about-peer-review/: aims-and-scope.html  aims-and-scope.md  code-of-conduct.html  code-of-conduct.md  how-peer-review-works.html  how-peer-review-works.md  intro.html  intro.md  policies-guidelines.html  policies-guidelines.md  pyopensci-related-joss-ropensci.html  pyopensci-related-joss-ropensci.md  review-benefits.html  review-benefits.md
(+304 files in other folders)
