[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "peer-review-guide"
dynamic = [
    "version"
]
dependencies = [
    "pyos_sphinx_theme",
    "myst-nb",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-favicon",
    "sphinx-togglebutton",
    # XML feed for analytics
    "sphinx-sitemap",
    # Support for social / adds meta tags
    "sphinxext-opengraph",
    "sphinx-inline-tabs",
    # for project cards
    "matplotlib",
    "pandas",
    "sphinx-codeautolink",
    "rich",
    "sphinxcontrib-youtube",
]

[project.optional-dependencies]
dev = [
    # for general build workflows
    "nox",
]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch]
version.source = "vcs"


# https://github.com/codespell-project/codespell#usage
[tool.codespell]
#ignore-words = "codespell-ignore.txt"
skip = "./.git,./.nox,./_static,./_build,codespell-ignore.txt,*.svg"


[tool.jupytext]
# Pair ipynb notebooks to py:percent text notebooks
formats = "ipynb,myst"
